# PythonAdvanced

./: .gitignore  pyproject.toml
hw_1/: nl_module.py  tail_module.py  test_file1.txt  test_file2.txt  test_nl.txt  wc_module.py
hw_1/artifacts/: test_nl_module.txt  test_tail_module.txt  test_wc_module.txt
hw_2/: Dockerfile  docker-compose.yml  generate_example.py
hw_2/artifacts/: example.aux  example.tex  package_link.txt  table_example.tex
hw_3/: matrix.py  matrix_np.py
hw_3/artifacts/: A.txt  AB.txt  C.txt  CD.txt  D.txt  hash.txt  matrix_np_div.txt  matrix_np_power.txt  matrix_np_transpose.txt
hw_4/: app.py  fibonacci.py  integrate.py
hw_4/artifacts/: app.txt  fibonacci_results.txt  integration_benchmark_results.txt
hw_5/: image_download.py
