[project]
name = "pythonadvanced"
version = "0.1.0"
description = ""
authors = [
    {name = "Mikhail.Kulyaskin"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click (>=8.1.8,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
nl_command = "hw_1.nl_module:nl_command"
tail_command = "hw_1.tail_module:tail_command"
wc_command = "hw_1.wc_module:wc_command"

[tool.poetry]
packages = [
    {include = "hw_1"}
]